argocd/lds.yaml
resources:
  - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
    name: ingress_http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                name: local_route
                
                # ==========================================
                # ドメインごとの振り分け設定
                # ==========================================
                virtual_hosts:
                  
                  # ① フロントエンド用（app.example.com）
                  - name: frontend_site
                    domains: ["reeldev.jp"]
                    routes:
                      - match:
                          prefix: "/" # すべてのパスを対象
                        route:
                          cluster: frontend_cluster
                # ==========================================

              http_filters:
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
    name: ingress_https
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10443
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_https
              route_config:
                name: local_route
                virtual_hosts:
                  - name: frontend_site
                    domains: ["reeldev.jp"]
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: frontend_cluster
              http_filters:
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            common_tls_context:
              tls_certificates:
                - certificate_chain:
                    filename: /etc/envoy/certs/tls.crt
                  private_key:
                    filename: /etc/envoy/certs/tls.key
