argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-external-service
  namespace: envoy
spec:
  type: NodePort
  nodePort: 32655
  selector:
    app: envoy 
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 10000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 10443
      nodePort: 32656
