argocd/site-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-site
  namespace: envoy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: site-app
  template:
    metadata:
      labels:
        app: site-app
    spec:
      containers:
        - name: site
          image: registry.uniproject.jp/homepage/site:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: site-service
  namespace: envoy
spec:
  selector:
    app: site-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
